Test suite is failing
+ /usr/bin/make -O -j4 check /usr/bin/cmake -S/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 -B/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 --check-build-system CMakeFiles/Makefile.cmake 0 /usr/bin/make -f CMakeFiles/Makefile2 check make[1]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/cmake -S/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 -B/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 --check-build-system CMakeFiles/Makefile.cmake 0 make[1]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' make[1]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/cmake -E cmake_progress_start /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/CMakeFiles 23 make[1]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/make -f CMakeFiles/Makefile2 CMakeFiles/check.dir/all /usr/bin/make -f src/server/CMakeFiles/evolution-ews.dir/build.make src/server/CMakeFiles/evolution-ews.dir/depend make[3]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' cd /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/src/server /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/src/server /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/src/server/CMakeFiles/evolution-ews.dir/DependInfo.cmake --color= make[3]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/make -f src/server/CMakeFiles/evolution-ews.dir/build.make src/server/CMakeFiles/evolution-ews.dir/build make[3]: Nothing to be done for 'src/server/CMakeFiles/evolution-ews.dir/build'. make[2]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' [ 78%] Built target evolution-ews make[2]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/make -f tests/CMakeFiles/ews-test-camel.dir/build.make tests/CMakeFiles/ews-test-camel.dir/depend /usr/bin/make -f tests/CMakeFiles/ews-test-timezones.dir/build.make tests/CMakeFiles/ews-test-timezones.dir/depend make[3]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' cd /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests/CMakeFiles/ews-test-camel.dir/DependInfo.cmake --color= make[3]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/make -f tests/CMakeFiles/ews-test-camel.dir/build.make tests/CMakeFiles/ews-test-camel.dir/build make[3]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' cd /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests/CMakeFiles/ews-test-timezones.dir/DependInfo.cmake --color= make[3]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/make -f tests/CMakeFiles/ews-test-timezones.dir/build.make tests/CMakeFiles/ews-test-timezones.dir/build make[3]: Nothing to be done for 'tests/CMakeFiles/ews-test-camel.dir/build'. make[3]: Nothing to be done for 'tests/CMakeFiles/ews-test-timezones.dir/build'. make[2]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' [ 91%] Built target ews-test-camel make[2]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' make[2]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' [100%] Built target ews-test-timezones make[2]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/make -f CMakeFiles/check.dir/build.make CMakeFiles/check.dir/depend make[3]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' cd /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/CMakeFiles/check.dir/DependInfo.cmake --color= Scanning dependencies of target check make[3]: Leaving directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/make -f CMakeFiles/check.dir/build.make CMakeFiles/check.dir/build make[3]: Entering directory '/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2' /usr/bin/ctest -V UpdateCTestConfiguration from :/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/DartConfiguration.tcl Parse Config file:/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/DartConfiguration.tcl UpdateCTestConfiguration from :/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/DartConfiguration.tcl Parse Config file:/home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/DartConfiguration.tcl Test project /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2 Constructing a list of tests Done constructing a list of tests Updating test list for fixtures Added 0 tests to meet fixture requirements Checking test dependency graph... Checking test dependency graph end test 1 Start 1: ews-test-camel 1: Test command: /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests/ews-test-camel 1: Test timeout computed to be: 1500 1: /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests/ews-test-camel: error while loading shared libraries: libevolution-ews.so: cannot open shared object file: No such file or directory 1/2 Test #1: ews-test-camel ...................***Failed 0.00 sec test 2 Start 2: ews-test-timezones 2: Test command: /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests/ews-test-timezones 2: Test timeout computed to be: 1500 2: /home/tkloczko/rpmbuild/BUILD/evolution-ews-3.33.2/tests/ews-test-timezones: error while loading shared libraries: libevolution-ews.so: cannot open shared object file: No such file or directory 2/2 Test #2: ews-test-timezones ...............***Failed 0.00 sec 0% tests passed, 2 tests failed out of 2 Total Test time (real) = 0.01 sec The following tests FAILED: 1 - ews-test-camel (Failed) 2 - ews-test-timezones (Failed) Errors while running CTest
Edited by Milan Crha