I#49 - Test suite is failing

Closes https://gitlab.gnome.org/GNOME/evolution-ews/issues/49